--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       </nav>
       <nav class="header-inner thin">
         <div class="header-shadow"></div>
-        <a class="header-nav-item" href="/"><img id="logo" src="/assets/logocb.png" style="height: 55px; width:55px;"/></a>
+        <a class="header-nav-item" href="/"><img id="logo2" src="/assets/logocb.png" style="height: 55px; width:55px;"/></a>
         <div class="header-nav-item btn-toggle" style="margin-left: auto;">
-          <img class="theme-icon" src="assets/sun.svg" style="margin: 0 auto; display: block; height: 20px; width:20px;" alt="theme"/>
+          <img class="theme-icon2" src="assets/sun.svg" style="margin: 0 auto; display: block; height: 20px; width:20px;" alt="theme"/>
         </div>
         <div class="header-nav-item">
           <img class="menu-icon" id="menuicon" src="assets/menu.svg" style="margin: 0 auto; display: block; height: 20px; width:20px;" alt="menu"/>
@@ -36,9 +36,9 @@
     </header>
 
     <div class="dropdown-content">
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
+      <a class="header-nav-item" href="projects">Projects</a>
+      <a class="header-nav-item" href="posts">Posts</a>
+      <a class="header-nav-item" href="https://www.buymeacoffee.com/euandeas">Support Me!</a>
     </div>
 
     <div class="grid-container">
@@ -91,4 +91,5 @@
     </footer>
   </body>
   <script src="scripts/theme.js"></script> 
+  <script src="scripts/dropdown.js"></script> 
 </html>
