--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header class="header">
-      <nav class="header-inner">
+      <nav class="header-inner wide">
         <div class="header-shadow"></div>
         <a class="header-nav-item" href="/"><img id="logo" src="/assets/logocb.png" style="height: 55px; width:55px;"/></a>
         <a class="header-nav-item" href="/projects">Projects</a>
@@ -24,7 +24,23 @@
           <img class="theme-icon" src="/assets/sun.svg" style="margin: 0 auto; display: block; height: 20px; width:20px;" alt="theme"/>
         </div>
       </nav>
+      <nav class="header-inner thin">
+        <div class="header-shadow"></div>
+        <a class="header-nav-item" href="/"><img id="logo2" src="/assets/logocb.png" style="height: 55px; width:55px;"/></a>
+        <div class="header-nav-item btn-toggle2" style="margin-left: auto;">
+          <img class="theme-icon2" src="assets/sun.svg" style="margin: 0 auto; display: block; height: 20px; width:20px;" alt="theme"/>
+        </div>
+        <div class="header-nav-item menu-toggle">
+          <img class="menu-icon" src="assets/menu.svg" style="margin: 0 auto; display: block; height: 20px; width:20px;" alt="menu"/>
+        </div>
+      </nav>
     </header>
+
+    <div class="dropdown-content">
+      <a class="header-nav-item" href="projects">Projects</a>
+      <a class="header-nav-item" href="posts">Posts</a>
+      <a class="header-nav-item" href="https://www.buymeacoffee.com/euandeas">Support Me!</a>
+    </div>
 
     <div class="grid-container">
         <div class="grid-100 mobile-grid-100" style="padding-top: 25vh;"></div>
