--- a/404.html
+++ b/404.html
@@ -65,5 +65,6 @@
       </div>
     </footer>
   </body>
-  <script src="/scripts/theme.js"></script> 
+  <script src="scripts/theme.js"></script> 
+  <script src="scripts/dropdown.js"></script> 
 </html>
