--- a/privacy.html
+++ b/privacy.html
@@ -62,5 +62,6 @@
       </div>
     </footer>
   </body>
-  <script src="/scripts/theme.js"></script> 
+  <script src="scripts/theme.js"></script> 
+  <script src="scripts/dropdown.js"></script> 
 </html>
