--- a/projects/clubclays.html
+++ b/projects/clubclays.html
@@ -89,4 +89,5 @@
   </body>
   <script src="../scripts/theme.js"></script>
   <script src="../scripts/flickity.pkgd.min.js"></script> 
+  <script src="../scripts/dropdown.js"></script> 
 </html>
