--- a/projects/index.html
+++ b/projects/index.html
@@ -77,4 +77,5 @@
     </footer>
   </body>
   <script src="../scripts/theme.js"></script> 
+  <script src="../scripts/dropdown.js"></script> 
 </html>
