--- a/projects/rowerstuff.html
+++ b/projects/rowerstuff.html
@@ -105,4 +105,5 @@
   </body>
   <script src="../scripts/theme.js"></script>
   <script src="../scripts/flickity.pkgd.min.js"></script> 
+  <script src="../scripts/dropdown.js"></script> 
 </html>
